app/css/app.css
/* ... */
.table-solid .row {
    padding: 13px 11px 17px;
    height:45px;
    color:#585453;
    border-bottom:1px solid #c3cfdf;
    background:#f7faff;
    overflow:hidden;
}

.table-solid .row.touch-start {
    background:#ebf0fa;
}

.table-solid .row.last {
    border-bottom:none;
}

.table-solid .table-header {
    padding: 6px 11px 5px;
    border-bottom:3px solid #2d5081;
    text-transform:uppercase;
}

.table-text-blue {
    color:#2d5081;
}

.table-solid .left {
    height:30px;
    font-size:18px;
    padding-left:30px;
    background:url("../ios-images/payments_icon_paid@2x.png") no-repeat;
    background-size: 21px 18px;
}

.table-solid .right {
    font-weight:normal;
    width : 56%;
}

.payment-month {
    color:#585453;
    font-size:20px;
    font-weight:normal;
    text-align:center;
    padding-top:18px;
    padding-bottom:18px;
}

.toggle {
    width:77px;
    height:27px;
    position:relative;
    overflow:hidden;
}

.toggle-shadow {
    position:absolute;
    width:100%;
    z-index:10;
    top:0;
    left:0;
    right:0;
    bottom:0;
    box-shadow:inset 0 1px 3px 0 rgba(0,0,0,0.3);
    border-radius:13px;
}

.toggle-container {
    width:100%;
    height:100%;
    /* tricks mobile safari into preserving the border radius cropping */
    -webkit-mask-image: -webkit-radial-gradient(circle, white, white);
    border-radius:13px;*/
    overflow:hidden;
}

.toggle-slider {
    position:relative;
    width:127px;
    height:27px;
    -webkit-transition:-webkit-transform 0.3s, left 0.3s;
    background:-webkit-linear-gradient(top, rgb(0,137,234) 0%,rgb(0,118,214) 100%),
               -webkit-linear-gradient(top, rgb(250,250,250) 0%,rgb(234,234,234) 100%);
    background-size:64px 100%, 63px 100%;
    background-position:0 0, 64px 0;
    background-repeat:no-repeat;
}

.toggle-on, .toggle-off {
    text-align:center;
    position:absolute;
    left:2px;
    width:50px;
    color:#fff;
    font-size:16px;
}
.toggle-off {
    right:4px;
    left:auto;
    color:#767676;
}

.toggle-knob {
    height:25px;
    position:absolute;
    left:51px;
    top:1px;
    width:25px;
    box-shadow:0 0 1px 1px rgba(0,0,0,0.5);
    background:-webkit-linear-gradient(top, rgb(255,255,255) 0%, rgb(240,240,240) 100%);
    border-radius:12px;
}

.input {
    width:100px;
    padding-top:4px;
    height:20px;
    overflow:auto;
}

.input.edit-mode input {
    display:block;
}

.input.edit-mode .input-formatted {
    display:none;
}

.input-formatted, .input input {
    font-weight:bold;
    color:blue;
    line-height:20px;
    text-align:right;
    font-size:15px;
}

.input-formatted {
    height:20px;
    width:100%;
}

.input input {
    display:none;
    height:20px;
    margin:0;
    border:0;
    padding:0;
    width:100%;
    outline:none;
}

#reload {
    position:absolute;
    height:40px;
    top:-40px;
    left:0;
    right:0;
    background:#730000;
}

#overview-assets {
    height:55px;
}

#overview-assets .left, #overview-assets .right {
    position:absolute;
    top:0;
    bottom:0;
    padding:11px;
}

#overview-assets .left {
    left:1px;
    right:50%;
    margin-left:-1px;
    border-right:1px solid #d1cfc8;
}

#overview-assets .right {
    right:1px;
    left:50%;
    margin-right:-1px;
    border-left:1px solid rgba(255,255,255,0.9);
}

.side-scroll {
    overflow:hidden;
 }

.side-scroll-container {
    -webkit-transform:translate3d(0,0,0);
    height:100%;
    overflow:hidden;
 }

.side-scroll.parralax {
    text-align:center;
    -webkit-mask-image: -webkit-linear-gradient(left, transparent 5%, 
                                                white 18%, white 82%, transparent 95%);
}

.side-scroll.parralax .side-scroll-container {
    padding:0 25%;
}

.side-scroll.table {
    top:40px;
}

.scroll-container {
  position:absolute;
  top:0;
  left:0;
  right:0;
  bottom:0;
  overflow:hidden;
}

.scroll-content {
  position:absolute;
  top:0;
  left:0;
  right:0;
  -webkit-transform: translate3d(0, 0, 0);
  overflow:auto;
}

.scroll-indicator {
  position:absolute;
  width:7px;
  height:7px;
  opacity:0;
  -webkit-transition-property: opacity;
  -webkit-transition-duration: .25s;
  z-index:100;
}

.scroll-indicator-y {
  top:0;
  right:2px;
}

.scroll-indicator-x {
  bottom:2px;
  left:0;
}

.scroll-indicator > div {
  position:absolute;
  top:0;
  left:0;
  -webkit-transform-origin: left top;
  background:url("/img/ios-scroll-indicator.png") no-repeat;
}

@media only screen 
and (-webkit-min-device-pixel-ratio: 2) {
  .scroll-indicator > div {
      background:url("/img/ios-scroll-indicator@2x.png") no-repeat;
      background-size:100%;
  }
}

.scroll-indicator-y > div {
  width:7px;
  height:3px;
}

.scroll-indicator-x > div {
  width:3px;
  height:7px;
}

.scroll-indicator-x .scroll-indicator-middle {
  background-position:-3px 0;
  position:absolute;
  left:3px;
  width:1px;
}

.scroll-indicator-y .scroll-indicator-middle {
  background-position:0 -3px;
  position:absolute;
  top:3px;
  height:1px;
}

.scroll-indicator-y :nth-child(3) {
  top:3px;
  background-position:0 -4px;
}

.scroll-indicator-x :nth-child(3) {
  left:3px;
  background-position:-4px 0;
}

